--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"engines" :     {"node": ">=6"},
 	"dependencies": {
 		"got": "^6.3",
-		"json2csv": "^3.7"
+		"csv": "^1.1.1",
+		"left-pad": "^1.1.3"
 	}
 }
